# data-gen

./: Cargo.toml  README.md  schema.json
data-gen/: Cargo.toml
data-gen-lib/: Cargo.toml
data-gen-lib/resources/: ancient.json  animal.json  appliance.json  artist.json  aviation.json  basketball.json  beer.json  harry_potter.json  zelda.json
data-gen-lib/src/: data_type.rs  generator.rs  lib.rs  regex_pattern.rs  schema.rs
data-gen-lib/src/interpolator/: address.rs  ancient.rs  dataset.rs  mod.rs
data-gen-lib/src/physical/: distributions.rs  mod.rs  physical_types.rs
data-gen/src/: format.rs  main.rs
data-gen/src/format/: csv.rs  json.rs
