[package]
name = "data-gen-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
lazy_static = "1.4"
include_dir = { version = "0.7", features = ["glob"] }
nom = "7.1"
rand = "0.8"
rand_regex = "0.15"
regex-syntax = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
json = []
